# c-http-server

./: .gitignore  CMakeLists.txt  README.md  chttpserver.pc.in
src/: CMakeLists.txt  connection.c  connection.h  header.c  header.h  protocol.c  protocol.h  request.c  request.h  response.c  response.h  route.h  router.c  router.h  server.c  server.h  status_code.c  status_code.h  transfer.c  transfer.h
test/: CMakeLists.txt  test_header.c  test_request.c  test_response.c  test_server.c
